# slicot-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  build.rs  slicot_init.sh
.claude/skills/slicot-knowledge/: SKILL.md
.claude/skills/slicot-knowledge/references/: routine-dependencies.md  rust-translation-examples.md
.devcontainer/: Dockerfile.optional  README.md  devcontainer.json
examples/: mb01qd_demo.rs  pole_placement_demo.rs  sb01bx_demo.rs
src/: lib.rs
src/ab/: mod.rs
src/ma/: mod.rs
src/mb/: mod.rs
src/mc/: mod.rs
src/sb/: mod.rs
src/tb/: mod.rs
src/tc/: mod.rs
tests/: complex_routines_test.rs  math_utilities_test.rs  mb03my_test.rs
