[package]
name = "slicot-rs"
version = "0.1.0"
edition = "2021"
authors = ["James Joseph <jamestjsp@outlook.com>"]
description = "Rust translation of SLICOT - Subroutine Library in Systems and Control Theory"
repository = "https://github.com/jamestjsp/slicot-rs"
license = "BSD-3-Clause"  # Check SLICOT's actual license
keywords = ["control-theory", "linear-algebra", "systems", "slicot"]
categories = ["science", "mathematics"]

[dependencies]
ndarray = "0.15"  # For matrix operations
num-complex = "0.4"  # Complex number support
lapack-sys = "0.14"  # Raw LAPACK FFI bindings for DGEHRD

# Platform-specific LAPACK backends
[target.'cfg(target_os = "macos")'.dependencies]
ndarray-linalg = { version = "0.16", features = [] }  # LAPACK/BLAS wrappers
accelerate-src = "0.3"  # Use Apple's Accelerate framework on macOS

[target.'cfg(not(target_os = "macos"))'.dependencies]
ndarray-linalg = { version = "0.16", features = ["openblas"] }  # LAPACK/BLAS wrappers
openblas-src = { version = "0.10", default-features = false, features = ["cblas", "system"] }  # OpenBLAS backend

[dev-dependencies]
approx = "0.5"  # For floating-point comparisons in tests